--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-  <title>WeatherApp</title>
+  <title>Weather ok App</title>
 
 
 
